--- a/ejercicio-3.css
+++ b/ejercicio-3.css
@@ -1,23 +1,19 @@
 .contenedor {
   background-color: grey;
-  /*display: flex;*/
-  display: inline-flex;
-  /*justify-content: center;*/
-  justify-content: flex-start;
-  justify-content: flex-end;
+  display: flex;
   justify-content: space-between;
-  margin: 20px;
-  border: 3px solid black;
+  border: 2px solid black;
 }
 .subcontenedor {
   width: 200px;
   height: 200px;
-  background-color: grey;
+  margin: 10px;
+  font-size: 30px;
+  text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 15px;
-  font-size: 30px;
+  border: 1px solid black;
 }
 .rojo {
   background-color: red;
